pkg/cmd/kurel/testdata/statefulset-ingress-custom-servicename/app.yaml
apiVersion: launcher.gokure.dev/v1alpha1
kind: Application
metadata:
  name: my-db
  namespace: default
spec:
  components:
    - name: db
      type: statefulset
      properties:
        image: ghcr.io/example/postgres:v15.0
        ports:
          - name: tcp
            containerPort: 5432
        serviceName: postgres-primary
    - name: postgres-primary
      type: service
      properties:
        clusterIP: None
        selector:
          app: db
        ports:
          - name: tcp
            port: 5432
      traits:
        - type: ingress
          properties:
            ingressClassName: nginx
            rules:
              - host: db.example.com
                paths:
                  - path: /
