pkg/cmd/kurel/testdata/statefulset-ingress-custom-servicename/expected.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: db
    launcher.gokure.dev/component: db
  name: db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  serviceName: postgres-primary
  template:
    metadata:
      labels:
        app: db
        launcher.gokure.dev/component: db
    spec:
      automountServiceAccountToken: false
      containers:
      - image: ghcr.io/example/postgres:v15.0
        name: db
        ports:
        - containerPort: 5432
          name: tcp
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
  updateStrategy: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-primary
    launcher.gokure.dev/component: postgres-primary
  name: postgres-primary
  namespace: default
spec:
  clusterIP: None
  ports:
  - name: tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: db
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: postgres-primary
    launcher.gokure.dev/component: postgres-primary
  name: postgres-primary-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: db.example.com
    http:
      paths:
      - backend:
          service:
            name: postgres-primary
            port:
              number: 5432
        path: /
        pathType: Prefix
